--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://kit.fontawesome.com/bd8e1362ea.js"></script>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
   </head>
   <body>
-        <%- body %>
-
+    <%- body %>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
