--- a/views/project.ejs
+++ b/views/project.ejs
@@ -1,22 +1,46 @@
-<%= typeof msg != 'undefined' ? msg: "" %>
-<form action="/admin/projectPost" method="POST" enctype="multipart/form-data">
-  <div>
-    <label for="title">Titre :</label>
-    <input type="text" id="title" name="title" />
-  </div>
-  <div class="description">
-    <label for="msg">Description :</label><br />
-    <textarea
+<link rel="stylesheet" href="/css/bootstrap.min.css" />
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body">
+      <%= typeof msg != 'undefined' ? msg: "" %>
+        <form action="/admin/projectPost" method="POST" enctype="multipart/form-data">
+        <h1 class="text-center mb-3"><i class="fas fa-plus-circle"></i> Add Project</h1>
+        <div class="form-group">
+        <label for="title">Titre :</label>
+        <input type="text" id="title" name="title" class="form-control"/>
+  
+      <div class="form-group">
+      <label for="msg">Description :</label><br />
+      <textarea
+      class="form-control"
       id="description"
       name="description"
       rows="5"
       cols="33"
       placeholder="..."
-    ></textarea>
+      ></textarea>
+      </div>
+      <div class="form-group">
+      <label for="prev">Git Page :</label>
+      <input type="text" id="prev" name="prev" class="form-control" />
+      </div>
+      <div class="form-group">
+      <label for="git">Github :</label>
+      <input type="text" id="git" name="git" class="form-control" />
+      </div>
+      <div class="form-group">
+      <input type="file" name="image" id="image" class="form-control-file"/>
+      </div>
+      <div class="button">
+      <button type="submit" class="btn btn-primary btn-block">Ajouter le projet</button>
+      </div>
+      </form>
+        <a class="btn btn-primary btn-block" href="/admin/dashboard">Go to Dashboard</a>     
+      </div>
+    </div>
   </div>
-  <div class="piece"></div>
-  <input type="file" name="image" id="image" />
-  <div class="button">
-    <button type="submit">Ajouter le projet</button>
-  </div>
-</form>
+</div>
+
+
+
+
