--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,6 +2,7 @@
 <section id="project-section">
     <h1>Dashboard</h1>
     <a href="/admin/project" class="btn btn-primary btn-block">Add Project</a>
+    <a href="/admin/reception" class="btn btn-primary btn-block">Messages</a>
     <a href="/users/logout" class="btn btn-primary btn-block">Logout</a>
     <div class="container-project">
         <% for(let i =0; i<project.length; i++){ %>
