--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body">
 <h1>Contact</h1>
-    <form action="/admin/contact-post" method="POST">
+    <form action="/contact-post" method="POST">
       <div>
         <label for="email">Email :</label>
         <input type="email" id="email" name="email" class="form-control"/>
