--- a/views/components/messages.ejs
+++ b/views/components/messages.ejs
@@ -30,4 +30,20 @@
   </button>
 </div>
 
+<% } %> <% if(email != '') { %>
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <%= email %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<% } %> <% if(update != '') { %>
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <%= update %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
 <% } %>
