--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,11 +1,28 @@
 <header>
-  <nav>
-    <h1>Homepage</h1>
-    <ul class="nav-bar">
-      <li class="nav-list"><a href="/contact">Contact</a></li>
-    <a href="/users/login">Login</a><li class="nav-list"></li>
+  <div class="page">
+    <span class="menu_toggle">
+      <i class="menu_open fa fa-bars fa-lg"></i>
+      <i class="menu_close fa fa-times fa-lg"></i>
+    </span>
+    <div class="menu-after"></div>
+    <ul class="menu_items">
+      <li><a href="#"><i class="icon fa fa-home fa-2x"></i> Moar</a></li>
+      <li><a href="#"><i class="icon fa fa-phone fa-2x"></i> Coffee</a></li>
+      <li><a href="#"><i class="icon fa fa-heart fa-2x"></i> Please</a></li>
     </ul>
-  </nav>
+    <main class="content">
+      <div class="square">
+      <div class="h1-square">
+        <h1>Portfolio</h1>
+      </div>
+      </div>
+      <div class="char-header">
+          <img src="/images/MorgHeader.gif" alt="morgana" id="Morg-header">
+          <img src="/images/Header-bulle.svg" alt="speak" id="Speak">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Ducimus sit voluptatibus nesciunt, aut soluta autem ab doloribus alias neque commodi.</p>
+        </div>
+      </main>
 </header>
 <section id="project-section">
   <div class="container-project">
@@ -20,3 +37,4 @@
   <% } %>
   </div>
 </section>
+
