--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,8 +1,34 @@
-* {
-  margin: auto;
-  padding: auto;
-  box-sizing: border-box;
+$red: #c90000;
+$black: #000000;
+$white: #ffffff;
+
+@font-face {
+  font-family: 'Dharma';
+  src: url('../fonts/Dharma\ Punk\ 2.ttf') format('truetype');
 }
 
-@import "_nav";
-@import "_project";
+@font-face {
+  font-family: 'p5';
+  src: url('/fonts/p5.ttf') format('truetype');
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  letter-spacing: 1px;
+  font-family: 'Poppins', sans-serif;
+
+  h1 {
+    font-family: 'Dharma', sans-serif;
+  }
+}
+
+body {
+  background-color: $red;
+  overflow: hidden;
+}
+
+@import '_menu';
+@import '_project';
+@import '_header';
