--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,14 +3,19 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body">
 <h1>Contact</h1>
+<% include ./components/messages %>
     <form action="/contact-post" method="POST">
       <div>
+        <label for="name">Nom :</label>
+        <input type="name" id="name" name="name" class="form-control" required/>
+      </div>
+      <div>
         <label for="email">Email :</label>
-        <input type="email" id="email" name="email" class="form-control"/>
+        <input type="email" id="email" name="email" class="form-control"required/>
       </div>
       <div>
         <label for="title">Sujet :</label>
-          <input type="text" id="sujet" name="sujet" class="form-control" />
+          <input type="text" id="sujet" name="sujet" class="form-control"required />
          <div class="description">
         <label for="message">Message :</label><br />
         <textarea
@@ -19,12 +24,13 @@
           rows="5"
           cols="33"
           placeholder="..."
-          class="form-control"
+          class="form-control"required
         ></textarea>
       </div>
-      <div class="button">
-        <button type="submit" class="btn btn-primary btn-block">Send</button>
-      </div>
+      
+        <button type="submit" class="btn btn-primary btn-block">Envoyer</button>
+     
+        <a href="/" class="btn btn-primary btn-block">Retour</a>
     </form>
     </div>
     </div>
