--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,17 +80,48 @@ body {
 .menu_items {
   position: absolute;
   bottom: 0;
-  left: 50px;
+  left: 10px;
   list-style-type: none;
   margin: 0;
   padding: 0; }
 
 .menu_items li {
+  cursor: pointer;
+  -webkit-clip-path: polygon(25% 0, 100% 0, 84% 14%, 4% 15%);
+  clip-path: polygon(25% 0, 100% 0, 84% 100%, 4% 100%);
+  padding: 0 10px;
+  display: flex;
+  width: 210px;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
   height: 60px;
+  z-index: 10;
   margin-bottom: 30px;
   transform: translateX(-300px);
   transition: transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1); }
+  .menu_items li:after {
+    content: '';
+    -webkit-clip-path: polygon(84% 100%, 100% 0, 84% 14%, 4% 15%);
+    clip-path: polygon(84% 100%, 100% 0, 84% 100%, 4% 100%);
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 210px;
+    height: 60px;
+    background-color: red; }
 
+@keyframes hoverRed {
+  0% {
+    -webkit-clip-path: polygon(84% 100%, 100% 0, 84% 14%, 4% 15%);
+    clip-path: polygon(84% 100%, 100% 0, 84% 100%, 4% 100%); }
+  50% {
+    -webkit-clip-path: polygon(25% 0, 100% 0, 84% 14%, 4% 15%);
+    clip-path: polygon(75% 60%, 100% 0, 84% 100%, 4% 100%); }
+  100% {
+    -webkit-clip-path: polygon(84% 100%, 100% 0, 84% 14%, 4% 15%);
+    clip-path: polygon(84% 100%, 100% 0, 84% 100%, 4% 100%); } }
 .menu_items li:nth-child(2) {
   margin-left: 40px; }
 
@@ -98,38 +129,36 @@ body {
   margin-left: 80px; }
 
 .menu_items a {
-  display: block;
+  text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: #a4a4a4;
-  transition: color 0.2s; }
+  color: #000000;
+  transition: color 0.2s;
+  z-index: 11;
+  transition: all 0.1s ease; }
 
-.menu_items a .icon {
+.menu_items li i {
+  z-index: 11;
   position: relative;
   display: inline-block;
-  margin-right: 25px;
-  color: #f0f0f0; }
+  margin-right: 10px;
+  color: #000000;
+  opacity: 1;
+  transition: all ease 0.3s; }
 
-.menu_items a .icon:after {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  content: '';
-  display: block;
-  width: 60px;
-  height: 60px;
-  margin-left: -33px;
-  margin-top: -32px;
-  border-radius: 100%;
-  border: 2px solid #f0f0f0;
-  transition: border-color 0.2s; }
+.menu_items li:hover::after {
+  animation: hoverRed 0.4s infinite; }
 
-.menu_items a:hover {
-  color: #f0f0f0; }
+.menu_items li:hover a {
+  font-weight: 700;
+  font-size: 1.4rem;
+  transform: rotate(10deg); }
 
-.menu_items a:hover .icon:after {
-  border-color: #f37272; }
+.menu_items li:hover i {
+  font-size: 1.4rem;
+  opacity: 0;
+  transform: rotate(10deg); }
 
 .menu_items a:active .icon {
   color: #f37272; }
@@ -196,21 +225,22 @@ body {
   position: absolute;
   width: 100%;
   top: 50%;
-  left: 15%;
+  left: 10%;
   transform: translate(0, -50%); }
   .char-header #Morg-header {
     width: 20%;
     filter: drop-shadow(-15px 15px 0px black); }
   .char-header #Speak {
-    width: 50%;
+    width: 60%;
     position: absolute;
-    top: 18%;
+    top: 10%;
     left: 12%; }
   .char-header p {
     color: white;
     width: 30%;
     position: absolute;
     top: 35%;
-    left: 30%; }
+    left: 33%;
+    font-size: 1rem; }
 
 /*# sourceMappingURL=style.css.map */
