--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -6,9 +6,9 @@
     </span>
     <div class="menu-after"></div>
     <ul class="menu_items">
-      <li><a href="#"><i class="icon fa fa-home fa-2x"></i> Moar</a></li>
-      <li><a href="#"><i class="icon fa fa-phone fa-2x"></i> Coffee</a></li>
-      <li><a href="#"><i class="icon fa fa-heart fa-2x"></i> Please</a></li>
+      <li><i class="fas fa-trophy fa-2x"></i><a href="#">Projet</a></li>
+      <li><i class="fas fa-address-book  fa-2x"></i><a href="/users/Contact">Contact</a></li>
+      <li><i class="fas fa-users-cog  fa-2x"></i><a href="/users/login">Login</a></li>
     </ul>
     <main class="content">
       <div class="square">
@@ -19,8 +19,7 @@
       <div class="char-header">
           <img src="/images/MorgHeader.gif" alt="morgana" id="Morg-header">
           <img src="/images/Header-bulle.svg" alt="speak" id="Speak">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Ducimus sit voluptatibus nesciunt, aut soluta autem ab doloribus alias neque commodi.</p>
+          <p>Bonjour ! Je m'appel Maxime, je suis développeur Javascript Fullstack. Voici mon portfolio !</p>
         </div>
       </main>
 </header>
