--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -13,6 +13,7 @@ $white: #ffffff;
 }
 
 * {
+  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -32,3 +33,4 @@ body {
 @import '_menu';
 @import '_project';
 @import '_header';
+@import '_typo';
