--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
           />
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
-        <a class="btn btn-primary btn-block" href="/">Retour</a>
+        <a class="btn btn-primary btn-block" href="/">Homepage</a>
       </form>
     </div>
   </div>
