--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
   font-family: 'p5';
   src: url("/fonts/p5.ttf") format("truetype"); }
 * {
+  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -87,9 +88,9 @@ body {
 
 .menu_items li {
   cursor: pointer;
-  -webkit-clip-path: polygon(25% 0, 100% 0, 84% 14%, 4% 15%);
-  clip-path: polygon(25% 0, 100% 0, 84% 100%, 4% 100%);
-  padding: 0 10px;
+  -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 0 100%);
+  clip-path: polygon(17% 25%, 79% 0, 100% 100%, 0 100%);
+  padding: 10px 15px 0 10px;
   display: flex;
   width: 210px;
   align-items: center;
@@ -102,26 +103,37 @@ body {
   transition: transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1); }
   .menu_items li:after {
     content: '';
-    -webkit-clip-path: polygon(84% 100%, 100% 0, 84% 14%, 4% 15%);
-    clip-path: polygon(84% 100%, 100% 0, 84% 100%, 4% 100%);
+    -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
+    clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
     position: absolute;
     display: block;
     top: 0;
     left: 0;
     width: 210px;
     height: 60px;
-    background-color: red; }
+    background-color: #c90000; }
+  .menu_items li:before {
+    content: '';
+    -webkit-clip-path: polygon(0% 80%, 79% 100%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 100%, 79% 100%, 100% 100%, 0% 100%);
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 210px;
+    height: 60px;
+    background-color: cyan; }
 
 @keyframes hoverRed {
   0% {
-    -webkit-clip-path: polygon(84% 100%, 100% 0, 84% 14%, 4% 15%);
-    clip-path: polygon(84% 100%, 100% 0, 84% 100%, 4% 100%); }
+    -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
+    clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%); }
   50% {
-    -webkit-clip-path: polygon(25% 0, 100% 0, 84% 14%, 4% 15%);
-    clip-path: polygon(75% 60%, 100% 0, 84% 100%, 4% 100%); }
+    -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 80% 25%);
+    clip-path: polygon(17% 25%, 79% 0, 100% 100%, 80% 25%); }
   100% {
-    -webkit-clip-path: polygon(84% 100%, 100% 0, 84% 14%, 4% 15%);
-    clip-path: polygon(84% 100%, 100% 0, 84% 100%, 4% 100%); } }
+    -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
+    clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%); } }
 .menu_items li:nth-child(2) {
   margin-left: 40px; }
 
@@ -129,10 +141,12 @@ body {
   margin-left: 80px; }
 
 .menu_items a {
+  margin-right: 1rem;
+  font-family: 'Dharma', sans-serif;
+  font-size: 2rem;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  letter-spacing: 2px;
   color: #000000;
   transition: color 0.2s;
   z-index: 11;
@@ -142,23 +156,26 @@ body {
   z-index: 11;
   position: relative;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 5px;
   color: #000000;
   opacity: 1;
   transition: all ease 0.3s; }
+
+.menu_items li:hover::before {
+  -webkit-clip-path: polygon(0% 80%, 79% 100%, 100% 100%, 0% 100%);
+  clip-path: polygon(0% 80%, 79% 100%, 100% 100%, 0% 100%); }
 
 .menu_items li:hover::after {
   animation: hoverRed 0.4s infinite; }
 
 .menu_items li:hover a {
-  font-weight: 700;
-  font-size: 1.4rem;
-  transform: rotate(10deg); }
+  font-size: 3rem;
+  transform: rotate(-5deg); }
 
 .menu_items li:hover i {
   font-size: 1.4rem;
   opacity: 0;
-  transform: rotate(10deg); }
+  transform: rotate(-10deg); }
 
 .menu_items a:active .icon {
   color: #f37272; }
@@ -183,18 +200,80 @@ body {
 .shazam .menu_items li:nth-child(3) {
   transition-delay: 0.48s; }
 
+#project-section {
+  -webkit-clip-path: polygon(0 21%, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
+  background-color: #000000;
+  position: relative;
+  padding-top: 8rem;
+  height: 115vh; }
+
 .container-project {
+  background-color: #ffffff;
+  padding-top: 1rem;
   display: flex;
-  flex-wrap: wrap; }
+  position: relative;
+  justify-content: flex-end;
+  width: 95%;
+  height: 100%;
+  margin: auto; }
   .container-project .project {
+    padding-top: 10%;
+    padding-right: 10%;
+    bottom: 0;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    opacity: 0;
+    transition: opacity 1s linear;
+    font-size: 1.2rem; }
+    .container-project .project a {
+      text-decoration: none;
+      color: #c90000; }
+  .container-project .project-text {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    border: solid 2px black;
-    width: 30%; }
+    align-items: center;
+    justify-content: center; }
+  .container-project .active {
+    opacity: 1; }
   .container-project .project_img {
-    width: 100%;
-    height: 100%; }
+    height: 65%;
+    border: 2px solid black;
+    cursor: pointer;
+    box-shadow: 25px -15px 5px rgba(0, 0, 0, 0.247); }
+
+#left {
+  opacity: 0;
+  cursor: pointer;
+  top: 50%;
+  left: 3%;
+  font-size: 3rem;
+  color: #000000;
+  position: absolute;
+  transition: 0.4s all ease;
+  pointer-events: none; }
+  #left:hover {
+    color: #c90000;
+    transform: scale(1.3); }
+
+#right {
+  cursor: pointer;
+  top: 50%;
+  right: 2%;
+  font-size: 3rem;
+  color: #000000;
+  position: absolute;
+  transition: 0.4s all ease; }
+  #right:hover {
+    color: #c90000;
+    transform: scale(1.3); }
 
 .square {
   margin-left: auto;
@@ -204,22 +283,8 @@ body {
   background-repeat: no-repeat;
   background-position: right 0 top 0;
   background-size: 100%;
-  position: relative; }
-
-.h1-square {
-  background-color: #ffffff;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -10%);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
-  clip-path: polygon(0 0, 100% 9%, 95% 28%, 6% 32%);
-  width: 50%;
-  height: 55%;
-  padding-top: 1.4rem; }
-  .h1-square h1 {
-    text-align: center;
-    font-size: 5rem; }
+  position: relative;
+  filter: drop-shadow(-150px 80px 0 rgba(0, 0, 0, 0.24)); }
 
 .char-header {
   position: absolute;
@@ -242,5 +307,93 @@ body {
     top: 35%;
     left: 33%;
     font-size: 1rem; }
+
+.h1-square {
+  background-color: #ffffff;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
+  width: 50%;
+  height: 15%;
+  z-index: 5; }
+  .h1-square h1 {
+    text-align: center;
+    font-size: 5rem;
+    transform: rotate(-2deg);
+    padding-right: 2rem;
+    padding-top: 3px; }
+  .h1-square:after {
+    content: '';
+    background-color: cyan;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+    clip-path: polygon(0 0, 100% 9%, 95% 9%, 6% 10%);
+    width: 100%;
+    height: 100%;
+    z-index: 5; }
+
+.red-square {
+  z-index: 4;
+  background-color: #c90000;
+  position: absolute;
+  top: 8%;
+  left: 48%;
+  transform: rotate(-4deg) translate(-50%, -10%);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
+  width: 50%;
+  height: 15%; }
+
+.h2-square {
+  position: absolute;
+  top: 7%;
+  left: 50%;
+  background-color: #ffffff;
+  color: #000000;
+  text-transform: uppercase;
+  text-align: center;
+  transform: translate(-50%, 0);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
+  width: 400px;
+  height: 70px;
+  z-index: 5; }
+  .h2-square h2 {
+    text-align: center;
+    font-size: 2.5rem; }
+  .h2-square:before {
+    content: '';
+    background-color: #c90000;
+    position: absolute;
+    display: block;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+    clip-path: polygon(92% 60%, 100% 9%, 95% 70%, 6% 100%);
+    width: 100%;
+    height: 100%;
+    z-index: 6; }
+
+.h2-square2 {
+  background-color: #000000;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-align: center;
+  transform: rotate(2deg) translate(-55%, 0);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
+  width: 420px;
+  height: 80px;
+  z-index: 4;
+  position: absolute;
+  top: 6%;
+  left: 51%; }
 
 /*# sourceMappingURL=style.css.map */
