--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -7,25 +7,7 @@
   background-position: right 0 top 0;
   background-size: 100%;
   position: relative;
-}
-
-.h1-square {
-  background-color: $white;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -10%);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
-  clip-path: polygon(0 0, 100% 9%, 95% 28%, 6% 32%);
-  width: 50%;
-  height: 55%;
-  padding-top: 1.4rem;
-  //   padding-left: 2rem;
-
-  h1 {
-    text-align: center;
-    font-size: 5rem;
-  }
+  filter: drop-shadow(-150px 80px 0 rgba(0, 0, 0, 0.24));
 }
 
 .char-header {
