--- a/public/scss/_menu.scss
+++ b/public/scss/_menu.scss
@@ -70,9 +70,9 @@
 }
 .menu_items li {
   cursor: pointer;
-  -webkit-clip-path: polygon(25% 0, 100% 0, 84% 14%, 4% 15%);
-  clip-path: polygon(25% 0, 100% 0, 84% 100%, 4% 100%);
-  padding: 0 10px;
+  -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 0 100%);
+  clip-path: polygon(17% 25%, 79% 0, 100% 100%, 0 100%);
+  padding: 10px 15px 0 10px;
   display: flex;
   width: 210px;
   align-items: center;
@@ -85,32 +85,44 @@
   transition: transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1);
   &:after {
     content: '';
-    -webkit-clip-path: polygon(84% 100%, 100% 0, 84% 14%, 4% 15%);
-    clip-path: polygon(84% 100%, 100% 0, 84% 100%, 4% 100%);
+    -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
+    clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
     position: absolute;
     display: block;
     top: 0;
     left: 0;
     width: 210px;
     height: 60px;
-    background-color: rgb(255, 0, 0);
+    background-color: $red;
+  }
+  &:before {
+    content: '';
+    -webkit-clip-path: polygon(0% 80%, 79% 100%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 100%, 79% 100%, 100% 100%, 0% 100%);
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 210px;
+    height: 60px;
+    background-color: cyan;
   }
 }
 
 @keyframes hoverRed {
   0% {
-    -webkit-clip-path: polygon(84% 100%, 100% 0, 84% 14%, 4% 15%);
-    clip-path: polygon(84% 100%, 100% 0, 84% 100%, 4% 100%);
+    -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
+    clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
   }
 
   50% {
-    -webkit-clip-path: polygon(25% 0, 100% 0, 84% 14%, 4% 15%);
-    clip-path: polygon(75% 60%, 100% 0, 84% 100%, 4% 100%);
+    -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 80% 25%);
+    clip-path: polygon(17% 25%, 79% 0, 100% 100%, 80% 25%);
   }
 
   100% {
-    -webkit-clip-path: polygon(84% 100%, 100% 0, 84% 14%, 4% 15%);
-    clip-path: polygon(84% 100%, 100% 0, 84% 100%, 4% 100%);
+    -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
+    clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
   }
 }
 
@@ -122,10 +134,12 @@
 }
 
 .menu_items a {
+  margin-right: 1rem;
+  font-family: 'Dharma', sans-serif;
+  font-size: 2rem;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  letter-spacing: 2px;
   color: $black;
   transition: color 0.2s;
   z-index: 11;
@@ -135,24 +149,28 @@
   z-index: 11;
   position: relative;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 5px;
   color: $black;
   opacity: 1;
   transition: all ease 0.3s;
+}
+
+.menu_items li:hover::before {
+  -webkit-clip-path: polygon(0% 80%, 79% 100%, 100% 100%, 0% 100%);
+  clip-path: polygon(0% 80%, 79% 100%, 100% 100%, 0% 100%);
 }
 
 .menu_items li:hover::after {
   animation: hoverRed 0.4s infinite;
 }
 .menu_items li:hover a {
-  font-weight: 700;
-  font-size: 1.4rem;
-  transform: rotate(10deg);
+  font-size: 3rem;
+  transform: rotate(-5deg);
 }
 .menu_items li:hover i {
   font-size: 1.4rem;
   opacity: 0;
-  transform: rotate(10deg);
+  transform: rotate(-10deg);
 }
 .menu_items a:active .icon {
   color: #f37272;
