--- a/public/scss/_project.scss
+++ b/public/scss/_project.scss
@@ -1,16 +1,91 @@
+#project-section {
+  -webkit-clip-path: polygon(0 21%, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
+  background-color: $black;
+  position: relative;
+  padding-top: 8rem;
+  height: 115vh;
+}
+
 .container-project {
+  // transform: rotate(2deg);
+  // -webkit-clip-path: polygon(0 24%, 98% 4%, 96% 97%, 0 95%);
+  // clip-path: polygon(1% 15%, 98% 1%, 96% 97%, 1% 95%);
+  background-color: $white;
+  padding-top: 1rem;
   display: flex;
-  flex-wrap: wrap;
+  position: relative;
+  justify-content: flex-end;
+  width: 95%;
+  height: 100%;
+  margin: auto;
   .project {
+    padding-top: 10%;
+    padding-right: 10%;
+    bottom: 0;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    background-color: $white;
+    opacity: 0;
+    transition: opacity 1s linear;
+    font-size: 1.2rem;
+    a {
+      text-decoration: none;
+      color: $red;
+    }
+  }
+  .project-text {
+    // transform: rotate(-2deg);
+
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    border: solid 2px black;
-    width: 30%;
+    align-items: center;
+    justify-content: center;
+  }
+  .active {
+    opacity: 1;
   }
 
   .project_img {
-    width: 100%;
-    height: 100%;
+    height: 65%;
+    border: 2px solid black;
+    cursor: pointer;
+    box-shadow: 25px -15px 5px rgba(0, 0, 0, 0.247);
+  }
+}
+
+#left {
+  opacity: 0;
+  cursor: pointer;
+  top: 50%;
+  left: 3%;
+  font-size: 3rem;
+  color: $black;
+  position: absolute;
+  transition: 0.4s all ease;
+  pointer-events: none;
+  &:hover {
+    color: $red;
+    transform: scale(1.3);
+  }
+}
+#right {
+  cursor: pointer;
+  top: 50%;
+  right: 2%;
+  font-size: 3rem;
+  color: $black;
+  position: absolute;
+  transition: 0.4s all ease;
+
+  &:hover {
+    color: $red;
+    transform: scale(1.3);
   }
 }
