--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,6 +35,7 @@
       AOS.init({ once: 'true' });
     </script>
     <script src="/js/menu.js"></script>
+    <script src="/js/texte.js"></script>
     <script src="/js/slider.js"></script>
   </body>
 </html>
