--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,7 +201,7 @@ body {
   transition-delay: 0.48s; }
 
 #project-section {
-  -webkit-clip-path: polygon(0 21%, 100% 0, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
   background-color: #000000;
   position: relative;
@@ -209,6 +209,9 @@ body {
   height: 115vh; }
 
 .container-project {
+  transform: rotate(2deg);
+  -webkit-clip-path: polygon(1% 6%, 98% 1%, 97% 97%, 3% 95%);
+  clip-path: polygon(1% 6%, 98% 1%, 97% 97%, 3% 95%);
   background-color: #ffffff;
   padding-top: 1rem;
   display: flex;
@@ -218,61 +221,110 @@ body {
   height: 100%;
   margin: auto; }
   .container-project .project {
-    padding-top: 10%;
-    padding-right: 10%;
-    bottom: 0;
+    padding: 8% 10% 0% 10%;
+    border-radius: 3px;
+    bottom: 50%;
+    right: 50%;
+    transform: translate(50%, 50%);
     position: absolute;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    height: 100%;
-    background-color: #ffffff;
+    width: 90%;
+    height: 85%;
     opacity: 0;
-    transition: opacity 1s linear;
-    font-size: 1.2rem; }
-    .container-project .project a {
-      text-decoration: none;
-      color: #c90000; }
+    background-color: #00dd76;
+    transition: opacity 0.5s ease-in-out;
+    font-size: 1rem;
+    pointer-events: none; }
+    .container-project .project:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.171);
+      -webkit-clip-path: polygon(0 0, 0 15%, 100% 0);
+      clip-path: polygon(0 0, 0 15%, 100% 0); }
   .container-project .project-text {
-    width: 100%;
+    height: 100%;
     display: flex;
+    width: 40%;
     flex-direction: column;
-    align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    text-align: left; }
+    .container-project .project-text h2 {
+      text-transform: uppercase;
+      font-size: 2rem;
+      color: #000000;
+      margin-bottom: 1em; }
+    .container-project .project-text p {
+      word-wrap: break-word;
+      width: 100%;
+      font-size: 1rem;
+      margin-bottom: 1.5em; }
+    .container-project .project-text #btn1 {
+      background-color: #000000;
+      text-decoration: none;
+      font-weight: 700;
+      mix-blend-mode: multiply;
+      color: #ffffff;
+      border: #000000 2px solid;
+      padding: 9px;
+      transition: all 0.5s ease; }
+      .container-project .project-text #btn1:hover {
+        mix-blend-mode: multiply;
+        color: #ffffff;
+        background-color: rgba(0, 0, 0, 0.5);
+        border: rgba(0, 0, 0, 0) 2px solid; }
+    .container-project .project-text #btn2 {
+      padding: 10px;
+      background-color: transparent;
+      border: #000000 2px solid;
+      text-decoration: none;
+      font-weight: 700;
+      color: #000000;
+      transition: all 0.5s ease; }
+      .container-project .project-text #btn2:hover {
+        mix-blend-mode: multiply;
+        color: #ffffff;
+        background-color: rgba(0, 0, 0, 0.5);
+        border: rgba(0, 0, 0, 0) 2px solid; }
   .container-project .active {
-    opacity: 1; }
+    opacity: 1;
+    pointer-events: visible; }
   .container-project .project_img {
-    height: 65%;
+    height: 70%;
     border: 2px solid black;
     cursor: pointer;
-    box-shadow: 25px -15px 5px rgba(0, 0, 0, 0.247); }
+    box-shadow: 25px -15px 2px rgba(0, 0, 0, 0.247); }
 
 #left {
   opacity: 0;
   cursor: pointer;
   top: 50%;
-  left: 3%;
+  left: 6%;
   font-size: 3rem;
   color: #000000;
   position: absolute;
   transition: 0.4s all ease;
   pointer-events: none; }
   #left:hover {
-    color: #c90000;
+    color: #ffffff;
     transform: scale(1.3); }
 
 #right {
   cursor: pointer;
   top: 50%;
-  right: 2%;
+  right: 6%;
   font-size: 3rem;
   color: #000000;
   position: absolute;
   transition: 0.4s all ease; }
   #right:hover {
-    color: #c90000;
+    color: #ffffff;
     transform: scale(1.3); }
 
 .square {
@@ -294,7 +346,7 @@ body {
   transform: translate(0, -50%); }
   .char-header #Morg-header {
     width: 20%;
-    filter: drop-shadow(-15px 15px 0px black); }
+    filter: drop-shadow(-15px 15px 2px black); }
   .char-header #Speak {
     width: 60%;
     position: absolute;
@@ -304,9 +356,9 @@ body {
     color: white;
     width: 30%;
     position: absolute;
-    top: 35%;
+    top: 45%;
     left: 33%;
-    font-size: 1rem; }
+    font-size: 1.2rem; }
 
 .h1-square {
   background-color: #ffffff;
@@ -314,7 +366,7 @@ body {
   top: 10%;
   left: 50%;
   transform: translate(-50%, -10%);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   width: 50%;
   height: 15%;
@@ -332,11 +384,18 @@ body {
     top: 10%;
     left: 50%;
     transform: translate(-50%, -10%);
-    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 9%, 6% 10%);
     clip-path: polygon(0 0, 100% 9%, 95% 9%, 6% 10%);
     width: 100%;
     height: 100%;
     z-index: 5; }
+
+.spe {
+  color: #c90000;
+  font-family: 'Dharma'; }
+
+.spe-h2 {
+  color: #c90000; }
 
 .red-square {
   z-index: 4;
@@ -345,10 +404,15 @@ body {
   top: 8%;
   left: 48%;
   transform: rotate(-4deg) translate(-50%, -10%);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   width: 50%;
   height: 15%; }
+
+.h2-css {
+  position: absolute;
+  top: 10%;
+  left: 50%; }
 
 .h2-square {
   position: absolute;
@@ -359,7 +423,7 @@ body {
   text-transform: uppercase;
   text-align: center;
   transform: translate(-50%, 0);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   width: 400px;
   height: 70px;
@@ -375,8 +439,8 @@ body {
     top: 10%;
     left: 50%;
     transform: translate(-50%, -10%);
-    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
-    clip-path: polygon(92% 60%, 100% 9%, 95% 70%, 6% 100%);
+    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 9%, 6% 10%);
+    clip-path: polygon(0 0, 100% 0%, 95% 9%, 0% 20%);
     width: 100%;
     height: 100%;
     z-index: 6; }
@@ -389,11 +453,108 @@ body {
   transform: rotate(2deg) translate(-55%, 0);
   -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
   clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
-  width: 420px;
-  height: 80px;
+  width: 410px;
+  height: 72px;
   z-index: 4;
   position: absolute;
-  top: 6%;
+  top: 4%;
   left: 51%; }
+
+.inter-section {
+  height: 15vh;
+  margin-top: -1px;
+  background-color: #000000;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 0);
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 20%); }
+
+footer {
+  position: relative;
+  height: 50vh; }
+
+.square-background {
+  position: absolute;
+  bottom: 0;
+  -webkit-clip-path: polygon(0 0, 53% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 100%, 100% 0, 100% 100%, 0 100%);
+  width: 100%;
+  height: 40%;
+  background-color: rgba(0, 0, 0, 0.26); }
+
+.char-footer {
+  position: relative;
+  height: 100%; }
+
+#morg-footer {
+  position: absolute;
+  top: -5%;
+  filter: drop-shadow(-20px 15px 2px black); }
+
+#speak-footer {
+  position: absolute;
+  top: 10%;
+  transform: rotate(0deg);
+  left: 20%;
+  width: 70%;
+  z-index: 1; }
+
+.footer-text {
+  display: flex;
+  flex-direction: column;
+  left: 50%;
+  top: 25%;
+  position: absolute;
+  z-index: 3; }
+  .footer-text h2 {
+    color: white; }
+
+.reseau {
+  top: 40%;
+  left: 50%;
+  z-index: 3;
+  display: flex;
+  list-style: none;
+  align-items: center;
+  height: 25vh; }
+  .reseau span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    transition: 0.5s;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 20px !important; }
+  .reseau li {
+    position: relative;
+    height: 40px;
+    width: 40px;
+    margin: 0 30px;
+    transform: rotate(-30deg) skew(25deg);
+    background-color: rgba(0, 0, 0, 0.308); }
+    .reseau li:hover span:nth-child(5) {
+      transform: translate(40px, -40px);
+      opacity: 1; }
+    .reseau li:hover span:nth-child(4) {
+      transform: translate(30px, -30px);
+      opacity: 0.8; }
+    .reseau li:hover span:nth-child(3) {
+      transform: translate(20px, -20px);
+      opacity: 0.6; }
+    .reseau li:hover span:nth-child(2) {
+      transform: translate(10px, -10px);
+      opacity: 0.4; }
+    .reseau li:hover span:nth-child(1) {
+      transform: translate(0px, 0px);
+      opacity: 0.2; }
+  .reseau li:nth-child(1) span {
+    background-color: #3b5999; }
+  .reseau li:nth-child(2) span {
+    background-color: #55acee; }
+  .reseau li:nth-child(3) span {
+    background-color: #e4405f; }
 
 /*# sourceMappingURL=style.css.map */
