--- a/public/scss/_project.scss
+++ b/public/scss/_project.scss
@@ -1,5 +1,5 @@
 #project-section {
-  -webkit-clip-path: polygon(0 21%, 100% 0, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
   background-color: $black;
   position: relative;
@@ -8,9 +8,9 @@
 }
 
 .container-project {
-  // transform: rotate(2deg);
-  // -webkit-clip-path: polygon(0 24%, 98% 4%, 96% 97%, 0 95%);
-  // clip-path: polygon(1% 15%, 98% 1%, 96% 97%, 1% 95%);
+  transform: rotate(2deg);
+  -webkit-clip-path: polygon(1% 6%, 98% 1%, 97% 97%, 3% 95%);
+  clip-path: polygon(1% 6%, 98% 1%, 97% 97%, 3% 95%);
   background-color: $white;
   padding-top: 1rem;
   display: flex;
@@ -20,43 +20,97 @@
   height: 100%;
   margin: auto;
   .project {
-    padding-top: 10%;
-    padding-right: 10%;
-    bottom: 0;
+    padding: 8% 10% 0% 10%;
+    border-radius: 3px;
+    bottom: 50%;
+    right: 50%;
+    transform: translate(50%, 50%);
     position: absolute;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    height: 100%;
-    background-color: $white;
+    width: 90%;
+    height: 85%;
     opacity: 0;
-    transition: opacity 1s linear;
-    font-size: 1.2rem;
-    a {
-      text-decoration: none;
-      color: $red;
+    background-color: rgb(0, 221, 118);
+    transition: opacity 0.5s ease-in-out;
+    font-size: 1rem;
+    pointer-events: none;
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.171);
+      -webkit-clip-path: polygon(0 0, 0 15%, 100% 0);
+      clip-path: polygon(0 0, 0 15%, 100% 0);
     }
   }
   .project-text {
-    // transform: rotate(-2deg);
-
-    width: 100%;
+    height: 100%;
     display: flex;
+    width: 40%;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    text-align: left;
+    h2 {
+      text-transform: uppercase;
+      font-size: 2rem;
+      color: $black;
+      margin-bottom: 1em;
+    }
+    p {
+      word-wrap: break-word;
+      width: 100%;
+      font-size: 1rem;
+      margin-bottom: 1.5em;
+    }
+
+    #btn1 {
+      background-color: $black;
+      text-decoration: none;
+      font-weight: 700;
+      mix-blend-mode: multiply;
+      color: $white;
+      border: $black 2px solid;
+      padding: 9px;
+      transition: all 0.5s ease;
+      &:hover {
+        mix-blend-mode: multiply;
+        color: $white;
+        background-color: rgba(0, 0, 0, 0.5);
+        border: rgba(0, 0, 0, 0) 2px solid;
+      }
+    }
+    #btn2 {
+      padding: 10px;
+      background-color: transparent;
+      border: $black 2px solid;
+      text-decoration: none;
+      font-weight: 700;
+      color: $black;
+      transition: all 0.5s ease;
+      &:hover {
+        mix-blend-mode: multiply;
+        color: $white;
+        background-color: rgba(0, 0, 0, 0.5);
+        border: rgba(0, 0, 0, 0) 2px solid;
+      }
+    }
   }
   .active {
     opacity: 1;
+    pointer-events: visible;
   }
 
   .project_img {
-    height: 65%;
+    height: 70%;
     border: 2px solid black;
     cursor: pointer;
-    box-shadow: 25px -15px 5px rgba(0, 0, 0, 0.247);
+    box-shadow: 25px -15px 2px rgba(0, 0, 0, 0.247);
   }
 }
 
@@ -64,28 +118,28 @@
   opacity: 0;
   cursor: pointer;
   top: 50%;
-  left: 3%;
+  left: 6%;
   font-size: 3rem;
   color: $black;
   position: absolute;
   transition: 0.4s all ease;
   pointer-events: none;
   &:hover {
-    color: $red;
+    color: $white;
     transform: scale(1.3);
   }
 }
 #right {
   cursor: pointer;
   top: 50%;
-  right: 2%;
+  right: 6%;
   font-size: 3rem;
   color: $black;
   position: absolute;
   transition: 0.4s all ease;
 
   &:hover {
-    color: $red;
+    color: $white;
     transform: scale(1.3);
   }
 }
