--- a/public/scss/_typo.scss
+++ b/public/scss/_typo.scss
@@ -4,7 +4,7 @@
   top: 10%;
   left: 50%;
   transform: translate(-50%, -10%);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   width: 50%;
   height: 15%;
@@ -23,12 +23,19 @@
     top: 10%;
     left: 50%;
     transform: translate(-50%, -10%);
-    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 9%, 6% 10%);
     clip-path: polygon(0 0, 100% 9%, 95% 9%, 6% 10%);
     width: 100%;
     height: 100%;
     z-index: 5;
   }
+}
+.spe {
+  color: $red;
+  font-family: 'Dharma';
+}
+.spe-h2 {
+  color: $red;
 }
 .red-square {
   z-index: 4;
@@ -37,10 +44,16 @@
   top: 8%;
   left: 48%;
   transform: rotate(-4deg) translate(-50%, -10%);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   width: 50%;
   height: 15%;
+}
+
+.h2-css {
+  position: absolute;
+  top: 10%;
+  left: 50%;
 }
 .h2-square {
   position: absolute;
@@ -51,7 +64,7 @@
   text-transform: uppercase;
   text-align: center;
   transform: translate(-50%, 0);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
+  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
   width: 400px;
   height: 70px;
@@ -69,8 +82,8 @@
     top: 10%;
     left: 50%;
     transform: translate(-50%, -10%);
-    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
-    clip-path: polygon(92% 60%, 100% 9%, 95% 70%, 6% 100%);
+    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 9%, 6% 10%);
+    clip-path: polygon(0 0, 100% 0%, 95% 9%, 0% 20%);
     width: 100%;
     height: 100%;
     z-index: 6;
@@ -85,10 +98,10 @@
   transform: rotate(2deg) translate(-55%, 0);
   -webkit-clip-path: polygon(0 0, 100% 9%, 95% 30%, 6% 20%);
   clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
-  width: 420px;
-  height: 80px;
+  width: 410px;
+  height: 72px;
   z-index: 4;
   position: absolute;
-  top: 6%;
+  top: 4%;
   left: 51%;
 }
