--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -27,7 +27,7 @@
       </div>
 </header>
 <section id="project-section">
-  <div id="projet" class="container-project" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500" data-aos-anchor="#projet">
+  <div id="projet"id="projet" class="container-project" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500" data-aos-anchor="#projet">
     <div class="h2-css">
     <div class="h2-square">
         <h2 >Pr<span class="spe-h2">o</span>jets</h2>
@@ -56,6 +56,8 @@
       
    </div>
  <footer>
+    <a href="#Head"><div class="jump-top"><h2>Home</h2></div></a>
+    <div class="jump-top"></div>
    <div class="char-footer">
       <img id="morg-footer" src="/images/Morgfooter.gif" alt="morgana" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" data-aos-anchor="#foot">
       <div class="footer-speak" >
