--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,37 +1,40 @@
-<link rel="stylesheet" href="/css/bootstrap.min.css" />
-<div class="row mt-5">
-  <div class="col-md-6 m-auto">
-    <div class="card card-body">
-<h1>Contact</h1>
-<% include ./components/messages %>
-    <form action="/contact-post" method="POST">
-      <div>
-        <label for="name">Nom :</label>
-        <input type="name" id="name" name="name" class="form-control" required/>
+
+<link rel="stylesheet" href="/css/style.css" />
+<section id="Contact">
+<div class="black-background"></div>
+<div class="contact-form"></div>
+    <form action="/contact-post" method="POST" class="contact-form">
+      <div class="contact-square">
+      <h2><i class="fas fa-envelope"></i>Cont<span class="spe-h2">a</span>ct</h2>
+      <% include ./components/messages %>
       </div>
-      <div>
-        <label for="email">Email :</label>
-        <input type="email" id="email" name="email" class="form-control"required/>
+      <div class="label-form">
+        <label for="name">Nom</label>
+        <input type="text" id="name" name="name" required/>
       </div>
-      <div>
-        <label for="title">Sujet :</label>
-          <input type="text" id="sujet" name="sujet" class="form-control"required />
-         <div class="description">
-        <label for="message">Message :</label><br />
+      <div class="label-form">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email"required/>
+      </div>
+      <div class="label-form">
+        <label for="title">Sujet</label>
+          <input type="text" id="sujet" name="sujet"required />
+         <div class="label-form">
+        <label for="message">Message</label>
         <textarea
           id="message"
           name="message"
           rows="5"
           cols="33"
           placeholder="..."
-          class="form-control"required
+        required
         ></textarea>
       </div>
-      
-        <button type="submit" class="btn btn-primary btn-block">Envoyer</button>
+        <div class="contact-btn">
+            <a class="contact-btn1" href="/">Retour</a>
+        <button class="contact-btn2"type="submit">Envoyer</button>
      
-        <a href="/" class="btn btn-primary btn-block">Retour</a>
+      </div>
     </form>
-    </div>
-    </div>
-  </div>
+   
+</section>
