--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,33 +1,26 @@
-<link rel="stylesheet" href="/css/bootstrap.min.css" />
-<div class="row mt-5">
-  <div class="col-md-6 m-auto">
-    <div class="card card-body">
-      <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i> Login</h1>
-      <% include ./components/messages %>
-      <form action="/users/login" method="POST">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            class="form-control"
-            placeholder="Enter Email"
-          />
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            class="form-control"
-            placeholder="Enter Password"
-          />
-        </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
-        <a class="btn btn-primary btn-block" href="/">Homepage</a>
-      </form>
+<link rel="stylesheet" href="/css/style.css" />
+<section id="Login">
+  <div class="black-background"></div>
+  <div class="login-form"></div>
+  <form action="/users/login" method="POST" class="contact-form">
+    <h2 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>Login</h2>
+    <% include ./components/messages %>
+    <div class="label-form">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Enter Email" />
     </div>
-  </div>
-</div>
+    <div class="label-form">
+      <label for="password">Password</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="Enter Password"
+      />
+    </div>
+    <div class="contact-btn">
+      <a class="contact-btn1" href="/">Home</a>
+      <button type="submit" class="contact-btn2">Login</button>
+    </div>
+  </form>
+</section>
