--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -35,6 +35,5 @@ body {
 @import '_header';
 @import '_typo';
 @import '_footer';
-@import '_contact';
+@import '_form';
 @import '_login';
-@import '_add';
