--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" href="/css/style.css" />
-<section id="Contact">
+<section class="Contact">
 <div class="black-background"></div>
 <div class="contact-form"></div>
     <form action="/contact-post" method="POST" class="contact-form">
