--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,13 @@
 <link rel="stylesheet" href="/css/style.css" />
-<section id="Login">
+<section class="Contact">
   <div class="black-background"></div>
   <div class="login-form"></div>
   <form action="/users/login" method="POST" class="contact-form">
-    <h2 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>Login</h2>
+    <div class="contact-square">
+      <h2 class="text-center mb-3">
+        <i class="fas fa-sign-in-alt"></i>L<span class="spe-h2">o</span>gin
+      </h2>
+    </div>
     <% include ./components/messages %>
     <div class="label-form">
       <label for="email">Email</label>
