--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="/css/bootstrap.min.css" />
 <section id="project-section">
     <h1>Dashboard</h1>
-    <a href="/admin/project" class="btn btn-primary btn-block">Add Project</a>
-    <a href="/admin/reception" class="btn btn-primary btn-block">Messages</a>
-    <a href="/users/logout" class="btn btn-primary btn-block">Logout</a>
+    <a href="/admin/project" class="btn btn-primary btn-block"><i class="fas fa-plus-circle"></i>Add Project</a>
+    <a href="/" class="btn btn-primary btn-block"> <i class="fas fa-home"></i>Accueil</a>
+    <a href="/users/logout" class="btn btn-primary btn-block"><i class="fas fa-sign-out-alt"></i>Logout</a>
     <% include ./components/messages %>
     <div class="container-project">
         <% for(let i =0; i<project.length; i++){ %>
