--- a/views/project.ejs
+++ b/views/project.ejs
@@ -1,16 +1,30 @@
-
-
+<link rel="stylesheet" href="/css/style.css" />
+<section class="Contact">
+    <div class="black-background"></div>
+  <div class="contact-form"></div>
+        <form class="contact-form" action="/admin/projectPost" method="POST" enctype="multipart/form-data">
+          <div class="contact-square">
+          <h2 class="text-center mb-3"><i class="fas fa-plus-circle"></i>Aj<span class="spe-h2">o</span>ut<span class="spe-h2">e</span>r</h2>
+          </div>
       <%= typeof msg != 'undefined' ? msg: "" %>
-        <form action="/admin/projectPost" method="POST" enctype="multipart/form-data">
-        <h1 class="text-center mb-3"><i class="fas fa-plus-circle"></i> Add Project</h1>
-        <div class="form-group">
-        <label for="title">Titre :</label>
-        <input type="text" id="title" name="title" class="form-control"/>
-  
-      <div class="form-group">
-      <label for="msg">Description :</label><br />
+        <div class="label-form">
+        <label for="title">Titre</label>
+        <input type="text" id="title" name="title"/>
+
+        <div class="label-form">
+            <label for="prev">Git Page</label>
+            <input type="text" id="prev" name="prev" />
+            </div>
+            <div class="label-form">
+            <label for="git">Github</label>
+            <input type="text" id="git" name="git" />
+            </div>
+      
+
+      <div class="label-form">
+      <label for="msg">Description</label>
       <textarea
-      class="form-control"
+    
       id="description"
       name="description"
       rows="5"
@@ -18,24 +32,19 @@
       placeholder="..."
       ></textarea>
       </div>
-      <div class="form-group">
-      <label for="prev">Git Page :</label>
-      <input type="text" id="prev" name="prev" class="form-control" />
-      </div>
-      <div class="form-group">
-      <label for="git">Github :</label>
-      <input type="text" id="git" name="git" class="form-control" />
-      </div>
-      <div class="form-group">
-      <input type="file" name="image" id="image" class="form-control-file"/>
-      </div>
-      <div class="button">
-      <button type="submit" class="btn btn-primary btn-block">Ajouter le projet</button>
+     
+      <div class="upload-btn-wrapper">
+          <button class="btn"> <i class="fas fa-paperclip"></i>Upload a file</button>
+          <input type="file" name="image" id="image" />
+        </div>
+        
+      <div class="contact-btn">
+      <a class="contact-btn1" href="/admin/dashboard">Menu</a>
+      <button class="contact-btn2"type="submit">Ajouter</button>
       </div>
       </form>
-        <a class="btn btn-primary btn-block" href="/admin/dashboard">Go to Dashboard</a>     
       </div>
-   
+    </section>
 
 
 
