--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,10 +32,8 @@
     ></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init({ once: 'true' });
+      AOS.init();
     </script>
     <script src="/js/menu.js"></script>
-    <script src="/js/texte.js"></script>
-    <script src="/js/slider.js"></script>
   </body>
 </html>
