--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -2,50 +2,32 @@
   height: 15vh;
   margin-top: -1px;
   background-color: $black;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 0);
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 20%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 20%, 0 80%);
+  clip-path: polygon(0 0, 100% 0, 100% 20%, 0 80%);
 }
 
 footer {
   position: relative;
-  height: 50vh;
+  height: 25vh;
 }
 
 .square-background {
   position: absolute;
   bottom: 0;
-  -webkit-clip-path: polygon(0 0, 53% 0, 100% 100%, 0 100%);
-  clip-path: polygon(0 100%, 100% 0, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 100%, 0% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 100%, 0% 0, 100% 100%, 0 100%);
   width: 100%;
   height: 40%;
   background-color: rgba(0, 0, 0, 0.26);
 }
 
-.char-footer {
-  position: relative;
-  height: 100%;
-}
-
-#morg-footer {
-  position: absolute;
-  top: -5%;
-  filter: drop-shadow(-20px 15px 2px black);
-}
-#speak-footer {
-  position: absolute;
-  top: 10%;
-  transform: rotate(0deg);
-  left: 20%;
-  width: 70%;
-  z-index: 1;
-}
-
 .footer-text {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   left: 50%;
   top: 25%;
-  position: absolute;
   z-index: 3;
   h2 {
     color: white;
@@ -58,8 +40,8 @@ footer {
   z-index: 3;
   display: flex;
   list-style: none;
-  align-items: center;
-  height: 25vh;
+  align-items: flex-end;
+  height: 15vh;
   span {
     position: absolute;
     top: 0;
@@ -126,7 +108,7 @@ footer {
   width: 90px;
   height: 90px;
   background-color: $white;
-  -webkit-clip-path: polygon(44% 3%, 100% 53%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(20% 0%, 100% 30%, 100% 100%, 0 100%);
   clip-path: polygon(20% 0%, 100% 30%, 100% 100%, 0 100%);
   display: flex;
   padding-left: 1rem;
