--- a/public/scss/_menu.scss
+++ b/public/scss/_menu.scss
@@ -4,6 +4,7 @@
 }
 .content {
   height: 100vh;
+  position: relative;
   transform-origin: top left;
   transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
   background-color: $red;
@@ -68,7 +69,7 @@
   margin: 0;
   padding: 0;
 }
-.menu_items li {
+.list {
   cursor: pointer;
   -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 0 100%);
   clip-path: polygon(17% 25%, 79% 0, 100% 100%, 0 100%);
