--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -7,9 +7,9 @@
     </span>
     <div class="menu-after"></div>
     <ul class="menu_items">
-      <li><i class="fas fa-trophy fa-2x"></i><a href="#projet">Projet</a></li>
-      <li><i class="fas fa-address-book  fa-2x"></i><a href="/Contact">Contact</a></li>
-      <li><i class="fas fa-users-cog  fa-2x"></i><a href="/users/login">Login</a></li>
+      <li class="list"><i class="fas fa-trophy fa-2x"></i><a href="#project-section">Projet</a></li>
+      <li class="list"><i class="fas fa-address-book  fa-2x"></i><a href="/Contact">Contact</a></li>
+      <li class="list"><i class="fas fa-users-cog  fa-2x"></i><a href="/users/login">Login</a></li>
     </ul>
     <main class="content">
       <div class="square">
@@ -26,7 +26,7 @@
       </main>
       </div>
 </header>
-<section id="project-section">
+<section class="project-section">
   <div id="projet"id="projet" class="container-project" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500" data-aos-anchor="#projet">
     <div class="h2-css">
     <div class="h2-square">
@@ -58,11 +58,7 @@
  <footer>
     <a href="#Head"><div class="jump-top"><h2>Home</h2></div></a>
     <div class="jump-top"></div>
-   <div class="char-footer">
-      <img id="morg-footer" src="/images/Morgfooter.gif" alt="morgana" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" data-aos-anchor="#foot">
-      <div class="footer-speak" >
-      <img id="speak-footer" src="/images/Header-bulle.svg" alt="speaker"data-aos="fade-right" data-aos-duration="300" data-aos-delay="1400" data-aos-anchor="#foot">
-      <div class="footer-text"data-aos="fade-right" data-aos-duration="300" data-aos-delay="1400" data-aos-anchor="#foot">
+     <div class="footer-text"data-aos="fade-up" data-aos-duration="300" data-aos-delay="500" data-aos-anchor="#foot">
       <h2>Vous pouvez me suivre juste ici !</h2>
       <ul class="reseau">
           <li>
@@ -97,7 +93,9 @@
         </ul>
     </div>
     </div>
-  </div>
+  
    <div class="square-background"></div>
  </footer>
+ <script src="/js/texte.js"></script>
+    <script src="/js/slider.js"></script>
 
